--- a/linux.config
+++ b/linux.config
@@ -20,37 +20,6 @@ mycat.sh
 echo `ls -d $*` | xargs -n 1 cat -n
 
 
-时区同步：
-tzselect  交互式选择
-cp /usr/share/zoneinfo/Asia/Shanghai  /etc/localtime
-
-
-rdate -s time.nist.gov  同步时间
-
-
--- 查看导出表
-nm -D 7z.so
-objdump -tT 7z.so
-
-
-
-date +"%Y%m%d" 输出 20170512
-
-
-
-
-
-
-
-
-
-
-# 这个是最新的
-
-\[\033[0;31m\]      \[\033[0m\]     色1    [  @ :  ]            
-\[\033[0;32m\]      \[\033[0m\]     色2    preboy   stoping
-\[\033[0;33m\]      \[\033[0m\]     色3    /usr/include
-\[\033[0;34m\]      \[\033[0m\]     色4    $                   
 
 
 # centos 7
@@ -69,5 +38,23 @@ export PS1="\[\033[0;35m\][\[\033[0m\]\[\033[0;32m\]\u\[\033[0m\]\[\033[0;36m\]@
 echo -e "\033[0;36mhello,world\033[0m"
 echo -e "\e[0;36mhello,world\e[0m"
 
+
+ON DEBIAN
+.bashrc
+# PS1='\033[01;31m\u@\033[00;33m\h\033[00m:\033[01;34m\w\033[00m$ '
+export PS1="\[\033[0;35m\][\[\033[0m\]\[\033[0;33m\]\u\[\033[0m\]\[\033[0;36m\]@\[\033[0m\]\[\033[0;33m\]\h\[\033[0m\]\[\033[0;36m\]:\[\033[0m\]\[\033[0;33m\]\w\[\033[0m\]\[\033[0;35m\]]\[\033[0m\]\[\033[0;36m\]$ \[\033[0m\]"
+
+
+
+解决ssh登录linux速度慢的问题(以centos7为例)
+解决步骤:
+先备份/etc/ssh/sshd_config,备份命令为
+cp /etc/ssh/sshd_config /etc/ssh/sshd_config.bak
+1.su                                    (以root用户登录)
+2.vi /etc/ssh/sshd_config      (编辑配置文件)
+3.输入 / ,查找GSSAPIAuthentication 赋值为no
+4.输入 /，查找UseDNS,赋值为 no(该项默认不启用的，要把前面的#删除掉)
+5.最后输入!wq保存文件并退出
+6.重启systemctl restart sshd
 
 
