--- a/linux.config
+++ b/linux.config
@@ -58,3 +58,15 @@ cp /etc/ssh/sshd_config /etc/ssh/sshd_config.bak
 6.÷ÿ∆Ùsystemctl restart sshd
 
 
+
+---------- config linux server ------------
+
+vim /etc/sysctl.conf
+kernel.core_pattern=core-%e-%p-%s
+sysctl -p
+
+vim /etc/security/limits.conf
+*                soft    core            unlimited
+*                hard    nofile          100000
+*                soft    nofile          100000
+
