--- a/linux.config
+++ b/linux.config
@@ -1,12 +1,13 @@
  把下面这几行写在.bashrc文件中，都是我常用的
 
-alias l='ls -l'
-alias ll='ls -la'
+
+
+alias l='ls -alhF'
+alias la='ls -A'
+alias ll='ls -lhF'
+alias ls='ls --color=auto'
 alias grep='grep --color=auto'
-alias vi='vim'
-alias cls='clear'
-alias cat='cat -n'
-# alias rm='rm -rf'
+
 
 mkdir $HOME/bin
 export PATH="$PATH:$HOME/bin"
@@ -69,4 +70,13 @@ vim /etc/security/limits.conf
 *                soft    core            unlimited
 *                hard    nofile          100000
 *                soft    nofile          100000
+
+
+
+deploy on linux:
+sudo apt install -y gcc g++ gdb vim cmake unzip tmux
+sudo apt install lua5.3 liblua5.3-dev libmariadb-dev
+
+sudo apt install -y python-pip
+sudo pip install shadowsocks
 
