--- a/linux.config
+++ b/linux.config
@@ -71,6 +71,10 @@ vim /etc/security/limits.conf
 *                hard    nofile          100000
 *                soft    nofile          100000
 
+command:
+    ulimit -Sc unlimited
+    ulimit -Sn unlimited
+
 
 
 deploy on linux:
@@ -80,3 +84,8 @@ sudo apt install lua5.3 liblua5.3-dev libmariadb-dev
 sudo apt install -y python-pip
 sudo pip install shadowsocks
 
+
+
+// ecl build on debian 9
+sudo apt install libncurses
+sudo apt install libncurses5-dev  libsqlite3-dev
