unique file encoding

--- a/linux.config
+++ b/linux.config
@@ -1,4 +1,4 @@
- °ÑÏÂÃæÕâ¼¸ÐÐÐ´ÔÚ.bashrcÎÄ¼þÖÐ£¬¶¼ÊÇÎÒ³£ÓÃµÄ
+ æŠŠä¸‹é¢è¿™å‡ è¡Œå†™åœ¨.bashrcæ–‡ä»¶ä¸­ï¼Œéƒ½æ˜¯æˆ‘å¸¸ç”¨çš„
 
 
 
@@ -28,14 +28,14 @@ export PS1="\[\033[0;35m\][\[\033[0m\]\[\033[0;32m\]\u\[\033[0m\]\[\033[0;36m\]@
 
 [u@h:w]$
 
-31  ºì
-32  ÂÌ
-33  »Æ
-34  À¶
-35  ×Ïºì
-36  µ­À¶   
+31  çº¢
+32  ç»¿
+33  é»„
+34  è“
+35  ç´«çº¢
+36  æ·¡è“   
 
-ÔÚÕâÀïÊ¹ÓÃ£¬²»ÐèÒª          \[  \]
+åœ¨è¿™é‡Œä½¿ç”¨ï¼Œä¸éœ€è¦          \[  \]
 echo -e "\033[0;36mhello,world\033[0m"
 echo -e "\e[0;36mhello,world\e[0m"
 
@@ -47,16 +47,16 @@ export PS1="\[\033[0;35m\][\[\033[0m\]\[\033[0;33m\]\u\[\033[0m\]\[\033[0;36m\]@
 
 
 
-½â¾össhµÇÂ¼linuxËÙ¶ÈÂýµÄÎÊÌâ(ÒÔcentos7ÎªÀý)
-½â¾ö²½Öè:
-ÏÈ±¸·Ý/etc/ssh/sshd_config,±¸·ÝÃüÁîÎª
+è§£å†³sshç™»å½•linuxé€Ÿåº¦æ…¢çš„é—®é¢˜(ä»¥centos7ä¸ºä¾‹)
+è§£å†³æ­¥éª¤:
+å…ˆå¤‡ä»½/etc/ssh/sshd_config,å¤‡ä»½å‘½ä»¤ä¸º
 cp /etc/ssh/sshd_config /etc/ssh/sshd_config.bak
-1.su                                    (ÒÔrootÓÃ»§µÇÂ¼)
-2.vi /etc/ssh/sshd_config      (±à¼­ÅäÖÃÎÄ¼þ)
-3.ÊäÈë / ,²éÕÒGSSAPIAuthentication ¸³ÖµÎªno
-4.ÊäÈë /£¬²éÕÒUseDNS,¸³ÖµÎª no(¸ÃÏîÄ¬ÈÏ²»ÆôÓÃµÄ£¬Òª°ÑÇ°ÃæµÄ#É¾³ýµô)
-5.×îºóÊäÈë!wq±£´æÎÄ¼þ²¢ÍË³ö
-6.ÖØÆôsystemctl restart sshd
+1.su                                    (ä»¥rootç”¨æˆ·ç™»å½•)
+2.vi /etc/ssh/sshd_config      (ç¼–è¾‘é…ç½®æ–‡ä»¶)
+3.è¾“å…¥ / ,æŸ¥æ‰¾GSSAPIAuthentication èµ‹å€¼ä¸ºno
+4.è¾“å…¥ /ï¼ŒæŸ¥æ‰¾UseDNS,èµ‹å€¼ä¸º no(è¯¥é¡¹é»˜è®¤ä¸å¯ç”¨çš„ï¼Œè¦æŠŠå‰é¢çš„#åˆ é™¤æŽ‰)
+5.æœ€åŽè¾“å…¥!wqä¿å­˜æ–‡ä»¶å¹¶é€€å‡º
+6.é‡å¯systemctl restart sshd
 
 
 
