--- a/linux.config
+++ b/linux.config
@@ -7,10 +7,14 @@ alias la='ls -A'
 alias ll='ls -lhF'
 alias ls='ls --color=auto'
 alias grep='grep --color=auto'
+alias gopath='export GOPATH=$(pwd)'
 
 
-mkdir $HOME/bin
-export PATH="$PATH:$HOME/bin"
+# mkdir $HOME/bin
+# export PATH="$PATH:$HOME/bin"
+
+export PS1="\[\e[1;32m\]\u@\h:\w$ \[\e[m\]"
+export HISTTIMEFORMAT="%F %T `whoami` "
 
 
 on ubuntu
@@ -19,8 +23,6 @@ export PS1="\[\e]0;\u@\h: \w\a\]${debian_chroot:+($debian_chroot)}\[\033[01;32m\
 
 mycat.sh
 echo `ls -d $*` | xargs -n 1 cat -n
-
-
 
 
 # centos 7
