--- a/linux.config
+++ b/linux.config
@@ -2,13 +2,12 @@
 
 
 
-alias l='ls -alhF'
-alias la='ls -A'
-alias ll='ls -lhF'
-alias ls='ls --color=auto'
-alias grep='grep --color=auto'
-alias gopath='export GOPATH=$(pwd)'
+alias l='ls -lhF'
+alias ll='ls -lahF'
 
+alias gitc='git pull --rebase; git status'
+alias git_ul='git ls-files -v | grep "^[hsmrck] "'
+alias gopath='export GOPATH=$(pwd)'
 
 # mkdir $HOME/bin
 # export PATH="$PATH:$HOME/bin"
