--- a/linux.config
+++ b/linux.config
@@ -1,7 +1,5 @@
  把下面这几行写在.bashrc文件中，都是我常用的
 
-
-
 alias l='ls -lhF'
 alias ll='ls -lahF'
 
@@ -47,7 +45,6 @@ ON DEBIAN
 export PS1="\[\033[0;35m\][\[\033[0m\]\[\033[0;33m\]\u\[\033[0m\]\[\033[0;36m\]@\[\033[0m\]\[\033[0;33m\]\h\[\033[0m\]\[\033[0;36m\]:\[\033[0m\]\[\033[0;33m\]\w\[\033[0m\]\[\033[0;35m\]]\[\033[0m\]\[\033[0;36m\]$ \[\033[0m\]"
 
 
-
 解决ssh登录linux速度慢的问题(以centos7为例)
 解决步骤:
 先备份/etc/ssh/sshd_config,备份命令为
@@ -55,11 +52,14 @@ cp /etc/ssh/sshd_config /etc/ssh/sshd_config.bak
 1.su                                    (以root用户登录)
 2.vi /etc/ssh/sshd_config      (编辑配置文件)
 3.输入 / ,查找GSSAPIAuthentication 赋值为no
-4.输入 /，查找UseDNS,赋值为 no(该项默认不启用的，要把前面的#删除掉)
+4.输入 /，查找UseDNS,赋值为 no(该项默认不启用的，要把前面的#删除掉)    这个地方按需要改：GSSAPIDelegateCredentials no
 5.最后输入!wq保存文件并退出
 6.重启systemctl restart sshd
 
 
+时区同步：
+tzselect  交互式选择
+cp /usr/share/zoneinfo/Asia/Shanghai  /etc/localtime
 
 ---------- config linux server ------------
 
