--- a/linux.config
+++ b/linux.config
@@ -90,3 +90,15 @@ sudo pip install shadowsocks
 // ecl build on debian 9
 sudo apt install libncurses
 sudo apt install libncurses5-dev  libsqlite3-dev
+
+
+
+ss.josn
+{
+    "server":"0.0.0.0",
+    "server_port":58388,
+    "local_port":1080,
+    "password":"barfoo!",
+    "timeout":600,
+    "method":"rc4-md5"
+}
