--- a/linux.config
+++ b/linux.config
@@ -1,5 +1,5 @@
- 把下面这几行写在.bashrc文件中，都是我常用的
-
+.vimrc
+================================================
 alias l='ls -lhF'
 alias ll='ls -lahF'
 
@@ -7,32 +7,63 @@ alias gitc='git pull --rebase; git status'
 alias git_ul='git ls-files -v | grep "^[hsmrck] "'
 alias gopath='export GOPATH=$(pwd)'
 
-# mkdir $HOME/bin
-# export PATH="$PATH:$HOME/bin"
+export PATH="$PATH:$HOME/bin"
 
 export PS1="\[\e[1;32m\]\u@\h:\w$ \[\e[m\]"
 export HISTTIMEFORMAT="%F %T `whoami` "
 
 
-on ubuntu
-export PS1="\[\e]0;\u@\h: \w\a\]${debian_chroot:+($debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ "
+/etc/vimrc
+==================================================
+set expandtab tabstop=4 shiftwidth=4
+filetype indent on
+
+nmap <C-j> <C-e>
+nmap <C-k> <C-y>
+
+highlight DiffAdd    cterm=bold  ctermbg=yellow
+highlight DiffDelete cterm=bold  ctermbg=cyan
+highlight DiffChange cterm=bold  ctermbg=green
+highlight DiffText   cterm=bold  ctermbg=red
 
 
+.gdbinit
+==================================================
+set prompt \033[32m(GDB) \033[0m
+
+.gitconfig
+===================================================
+[user]
+        name = zcg
+        email = zcg@qq.com
+[push]
+        default = simple
+[diff]
+        tool=vimdiff
+[color]
+        ui = auto
+
+
+
+
+
+
+其它文件：
 mycat.sh
 echo `ls -d $*` | xargs -n 1 cat -n
 
 
-# centos 7
+# centos 7 特别PS1
 export PS1="\[\033[0;35m\][\[\033[0m\]\[\033[0;32m\]\u\[\033[0m\]\[\033[0;36m\]@\[\033[0m\]\[\033[0;32m\]\h\[\033[0m\]\[\033[0;35m\]:\[\033[0m\]\[\033[0;33m\]\w\[\033[0m\]\[\033[0;35m\]]\[\033[0m\]\[\033[0;36m\]$ \[\033[0m\]"
-
+说明：
 [u@h:w]$
-
 31  红
 32  绿
 33  黄
 34  蓝
 35  紫红
 36  淡蓝   
+
 
 在这里使用，不需要          \[  \]
 echo -e "\033[0;36mhello,world\033[0m"
@@ -60,6 +91,9 @@ cp /etc/ssh/sshd_config /etc/ssh/sshd_config.bak
 时区同步：
 tzselect  交互式选择
 cp /usr/share/zoneinfo/Asia/Shanghai  /etc/localtime
+
+
+
 
 ---------- config linux server ------------
 
@@ -90,7 +124,6 @@ sudo pip install shadowsocks
 // ecl build on debian 9
 sudo apt install libncurses
 sudo apt install libncurses5-dev  libsqlite3-dev
-
 
 
 ss.josn
