* git short name

--- a/linux.config
+++ b/linux.config
@@ -3,6 +3,8 @@
 alias l='ls -lhF'
 alias ll='ls -lahF'
 
+alias gs='git status'
+alias gb='git branch -vv'
 alias gitc='git pull --rebase; git status'
 alias git_ul='git ls-files -v | grep "^[hsmrck] "'
 alias gopath='export GOPATH=$(pwd)'
