--- a/linux.config
+++ b/linux.config
@@ -5,14 +5,15 @@ alias ll='ls -lahF'
 
 alias gs='git status'
 alias gb='git branch -vv'
+alias gl='git log  --graph'
 alias gitc='git pull --rebase; git status'
 alias git_ul='git ls-files -v | grep "^[hsmrck] "'
-alias gopath='export GOPATH=$(pwd)'
-
-export PATH="$PATH:$HOME/bin"
+alias gopath='export GOPATH=$(pwd); go env GOPATH'
 
 export PS1="\[\e[1;32m\]\u@\h:\w$ \[\e[m\]"
 export HISTTIMEFORMAT="%F %T `whoami` "
+
+export PATH="$PATH:$HOME/bin"
 
 
 /etc/vimrc
