--- a/linux.config
+++ b/linux.config
@@ -3,6 +3,7 @@
 alias l='ls -lhF'
 alias ll='ls -lahF'
 
+alias gf='git diff'
 alias gs='git status'
 alias gb='git branch -vv'
 alias gl='git log  --graph'
