--- a/linux.config
+++ b/linux.config
@@ -1,22 +1,3 @@
-.vimrc
-================================================
-alias l='ls -lhF'
-alias ll='ls -lahF'
-
-alias gf='git diff'
-alias gs='git status'
-alias gb='git branch -vv'
-alias gl='git log  --graph'
-alias gitc='git pull --rebase; git status'
-alias git_ul='git ls-files -v | grep "^[hsmrck] "'
-alias gopath='export GOPATH=$(pwd); go env GOPATH'
-
-export PS1="\[\e[1;32m\]\u@\h:\w$ \[\e[m\]"
-export HISTTIMEFORMAT="%F %T `whoami` "
-
-export PATH="$PATH:$HOME/bin"
-
-
 /etc/vimrc
 ==================================================
 set expandtab tabstop=4 shiftwidth=4
@@ -57,7 +38,7 @@ mycat.sh
 echo `ls -d $*` | xargs -n 1 cat -n
 
 
-# centos 7 特别PS1
+# centos 7 特别PS1  【学习】
 export PS1="\[\033[0;35m\][\[\033[0m\]\[\033[0;32m\]\u\[\033[0m\]\[\033[0;36m\]@\[\033[0m\]\[\033[0;32m\]\h\[\033[0m\]\[\033[0;35m\]:\[\033[0m\]\[\033[0;33m\]\w\[\033[0m\]\[\033[0;35m\]]\[\033[0m\]\[\033[0;36m\]$ \[\033[0m\]"
 说明：
 [u@h:w]$
@@ -99,7 +80,7 @@ cp /usr/share/zoneinfo/Asia/Shanghai  /etc/localtime
 
 
 
----------- config linux server ------------
+---------- config linux server 【centos 6 (fy)】------------
 
 vim /etc/sysctl.conf
 kernel.core_pattern=core-%e-%p-%s
@@ -139,3 +120,40 @@ ss.josn
     "timeout":600,
     "method":"rc4-md5"
 }
+
+
+.bashrc[centos7]
+====================================================================================================
+...
+# User specific aliases and functions
+
+alias l='ls -lhF'
+alias ll='ls -lhaF'
+
+alias gd='git diff'
+alias gs='git status'
+alias gb='git branch -vv'
+alias gl='git log  --graph'
+alias gitc='git pull --rebase; git status'
+alias git_ul='git ls-files -v | grep "^[hsmrck] "'
+alias gopath='export GOPATH=$(pwd); go env GOPATH'
+
+export HISTTIMEFORMAT="%F %T `whoami` "
+
+
+# git auto-completion
+if [ -f ~/.git-completion.bash ]; then
+. ~/.git-completion.bash
+fi
+
+function git-branch-name {
+  git symbolic-ref HEAD 2>/dev/null | cut -d"/" -f 3
+}
+
+function git-branch-prompt {
+  local branch=`git-branch-name`
+  if [ $branch ]; then printf "[%s]" $branch; fi
+}
+
+# export PS1="\[\e[1;33m\]\u@\h:\w\$(git-branch-prompt)$ \[\e[m\]"
+export PS1="\[\e[1;33m\]\u@\h:\w\[\e[m\]\[\e[1;32m\]\$(git-branch-prompt)\[\e[m\]\[\e[1;33m\]$ \[\e[m\]"
