--- a/linux.config
+++ b/linux.config
@@ -130,6 +130,8 @@ ss.josn
 alias l='ls -lhF'
 alias ll='ls -lhaF'
 
+alias where='whereis'
+
 alias gd='git diff'
 alias gs='git status'
 alias gb='git branch -vv'
@@ -137,6 +139,7 @@ alias gl='git log  --graph'
 alias gitc='git pull --rebase; git status'
 alias git_ul='git ls-files -v | grep "^[hsmrck] "'
 alias gopath='export GOPATH=$(pwd); go env GOPATH'
+
 
 export HISTTIMEFORMAT="%F %T `whoami` "
 
