* gss=git pull ; git status

--- a/linux.config
+++ b/linux.config
@@ -136,10 +136,11 @@ alias gd='git diff'
 alias gs='git status'
 alias gb='git branch -vv'
 alias gl='git log  --graph'
+alias gss='git pull; git status'
 alias gitc='git pull --rebase; git status'
 alias git_ul='git ls-files -v | grep "^[hsmrck] "'
-alias gopath='export GOPATH=$(pwd); go env GOPATH'
 
+alias gopath='export GOPATH=$(pwd); go env GOPATH'
 
 export HISTTIMEFORMAT="%F %T `whoami` "
 
