--- a/linux.config
+++ b/linux.config
@@ -1,37 +1,3 @@
-/etc/vimrc
-==================================================
-set expandtab tabstop=4 shiftwidth=4
-filetype indent on
-
-nmap <C-j> <C-e>
-nmap <C-k> <C-y>
-
-highlight DiffAdd    cterm=bold  ctermbg=yellow
-highlight DiffDelete cterm=bold  ctermbg=cyan
-highlight DiffChange cterm=bold  ctermbg=green
-highlight DiffText   cterm=bold  ctermbg=red
-
-
-.gdbinit
-==================================================
-set prompt \033[32m(GDB) \033[0m
-
-.gitconfig
-===================================================
-[user]
-        name = zcg
-        email = zcg@qq.com
-[push]
-        default = simple
-[diff]
-        tool=vimdiff
-[color]
-        ui = auto
-
-
-
-
-
 
 其它文件：
 mycat.sh
@@ -79,39 +45,54 @@ cp /usr/share/zoneinfo/Asia/Shanghai  /etc/localtime
 
 
 
+------------------------------ 通用文件配置修改 ------------------------------
 
----------- config linux server 【centos 6 (fy)】------------
+/etc/vimrc
+====================================================================================================
+set expandtab tabstop=4 shiftwidth=4
+filetype indent on
+
+nmap <C-j> <C-e>
+nmap <C-k> <C-y>
+
+highlight DiffAdd    cterm=bold  ctermbg=yellow
+highlight DiffDelete cterm=bold  ctermbg=cyan
+highlight DiffChange cterm=bold  ctermbg=green
+highlight DiffText   cterm=bold  ctermbg=red
+
 
 vim /etc/sysctl.conf
+====================================================================================================
 kernel.core_pattern=core-%e-%p-%s
 sysctl -p
 
 vim /etc/security/limits.conf
+====================================================================================================
 *                soft    core            unlimited
 *                hard    nofile          100000
 *                soft    nofile          100000
 
-command:
-    ulimit -Sc unlimited
-    ulimit -Sn unlimited
+vim /etc/profile
+====================================================================================================
+export PATH=$PATH:/usr/local/go/bin
+ulimit -Sc unlimited
+ulimit -Sn unlimited
 
 
 
-deploy on linux:
+// ecl build on debian 9  DEPLOY
+====================================================================================================
 sudo apt install -y gcc g++ gdb vim cmake unzip tmux
 sudo apt install lua5.3 liblua5.3-dev libmariadb-dev
-
-sudo apt install -y python-pip
-sudo pip install shadowsocks
-
-
-
-// ecl build on debian 9
 sudo apt install libncurses
 sudo apt install libncurses5-dev  libsqlite3-dev
 
 
-ss.josn
+// SHADOWSOCKS
+sudo apt install -y python-pip
+sudo pip install shadowsocks
+
+ss.josn 内容：
 {
     "server":"0.0.0.0",
     "server_port":58388,
@@ -120,6 +101,9 @@ ss.josn
     "timeout":600,
     "method":"rc4-md5"
 }
+
+
+------------------------------ 用户文件配置修改 ------------------------------
 
 
 .bashrc[centos7]
@@ -161,3 +145,32 @@ function git-branch-prompt {
 
 # export PS1="\[\e[1;33m\]\u@\h:\w\$(git-branch-prompt)$ \[\e[m\]"
 export PS1="\[\e[1;33m\]\u@\h:\w\[\e[m\]\[\e[1;32m\]\$(git-branch-prompt)\[\e[m\]\[\e[1;33m\]$ \[\e[m\]"
+
+
+
+.gdbinit
+====================================================================================================
+set prompt \033[32m(GDB) \033[0m
+
+.gitconfig
+====================================================================================================
+
+[user]
+        name = zcg
+        email = zcg@qq.com
+[push]
+        default = simple
+[diff]
+        tool=vimdiff
+[color]
+        ui = auto
+
+
+
+
+------------------------------ 其它配置 ------------------------------
+
+SHADOWSOCKS 加速
+wget --no-check-certificate https://raw.githubusercontent.com/wn789/BBR/master/bbr.sh
+chmod +x bbr.sh
+./bbr.sh
