* sublime_text.config

--- a/sublime_text.config
+++ b/sublime_text.config
@@ -1,59 +1,62 @@
 ﻿Setting.User:
 {
-	"always_prompt_for_file_reload": true,
-	"auto_match_enabled": false,
-	"color_scheme": "Packages/Color Scheme - Default/Mariana.tmTheme",
-	"default_line_ending": "unix",
-	"fade_fold_buttons": false,
-	"folder_exclude_patterns":
-	[
-		".svn",
-		".git",
-		".hg",
-		"CVS",
-		"github.com",
-		"node_modules",
-		"gopkg.in",
-		"bin"
-	],
-	"font_face": "Consolas",
-	"font_size": 14,
-	"highlight_line": true,
-	"highlight_modified_tabs": true,
-	"ignored_packages":
-	[
-		"Vintage"
-	],
-	"line_padding_bottom": 2,
-	"line_padding_top": 2,
-	"preview_on_click": false,
-	"scroll_speed": 0,
-	"show_encoding": true,
-	"show_line_endings": true,
-	"show_tab_close_buttons": false,
-	"tab_completion": false,
-	"theme": "Default.sublime-theme",
-	"translate_tabs_to_spaces": true,
-	"trim_trailing_white_space_on_save": false,
-	"update_check": false
+    "always_prompt_for_file_reload": true,
+    "auto_match_enabled": true,
+    "color_scheme": "Packages/Color Scheme - Default/Mariana.tmTheme",
+    "default_line_ending": "unix",
+    "fade_fold_buttons": false,
+    "folder_exclude_patterns":
+    [
+        ".svn",
+        ".git",
+        ".hg",
+        "CVS",
+        "github.com",
+        "node_modules",
+        "gopkg.in",
+        "pkg"
+    ],
+    "font_face": "Consolas",
+    "font_size": 14,
+    "highlight_line": true,
+    "highlight_modified_tabs": true,
+    "ignored_packages":
+    [
+        "Vintage"
+    ],
+    "line_padding_bottom": 2,
+    "line_padding_top": 2,
+    "preview_on_click": false,
+    "scroll_speed": 0,
+    "show_encoding": true,
+    "show_line_endings": true,
+    "show_tab_close_buttons": false,
+    "tab_completion": false,
+    "theme": "Default.sublime-theme",
+    "translate_tabs_to_spaces": true,
+    "trim_trailing_white_space_on_save": false,
+    "update_check": false
 }
+
 
 
 Key Bindings:
 [
-	{ "keys": ["ctrl+alt+keypad_minus"], "command": "fold_by_level", "args": {"level": 1} },
-	{ "keys": ["ctrl+alt+keypad_plus"], "command": "unfold_all" },
-	{ "keys": ["super+`"], "command": "show_panel", "args":{"panel": "output.find_results"} },
-	{ "keys": ["alt+right"], "command": "auto_complete" },
-	{ "keys": ["ctrl+f7"], "command": "exec", "args": {"kill": true} },
-	{ "keys": ["alt+shift+f"], "command": "show_panel", "args": {"panel": "find_in_files"} },
-	{ "keys": ["alt+f12"], "command": "next_view" },
-	{ "keys": ["alt+shift+f12"], "command": "prev_view" },
-	{ "keys": ["alt+g"], "command": "goto_definition" },
-	{ "keys": ["ctrl+-"], "command": "jump_back" },
-	{ "keys": ["ctrl+shift+-"], "command": "jump_forward" },
-	{ "keys": ["ctrl+k", "ctrl+k"], "command": "set_mark" }
+    { "keys": ["ctrl+alt+keypad_minus"], "command": "fold_by_level", "args": {"level": 1} },
+    { "keys": ["ctrl+alt+keypad_plus"], "command": "unfold_all" },
+    { "keys": ["super+`"], "command": "show_panel", "args":{"panel": "output.find_results"} },
+    { "keys": ["alt+right"], "command": "auto_complete" },
+    { "keys": ["ctrl+f7"], "command": "exec", "args": {"kill": true} },
+    { "keys": ["alt+shift+f"], "command": "show_panel", "args": {"panel": "find_in_files"} },
+    { "keys": ["alt+f12"], "command": "next_view" },
+    { "keys": ["alt+shift+f12"], "command": "prev_view" },
+    { "keys": ["alt+g"], "command": "goto_definition" },
+    { "keys": ["ctrl+-"], "command": "jump_back" },
+    { "keys": ["ctrl+shift+-"], "command": "jump_forward" },
+    { "keys": ["ctrl+k", "ctrl+k"], "command": "set_mark" },
+    { "keys": ["ctrl+l"], "command": "run_macro_file", "args": {"file": "res://Packages/Default/Delete Line.sublime-macro"} },
 ]
+
 
 
 
