--- a/linux.config
+++ b/linux.config
@@ -116,6 +116,8 @@ alias ll='ls -lhaF'
 
 alias where='whereis'
 
+
+alias gf='git fetch'
 alias gd='git diff'
 alias gs='git status'
 alias gb='git branch -vv'
