--- a/linux.config
+++ b/linux.config
@@ -13,7 +13,7 @@ export PS1="\[\033[0;35m\][\[\033[0m\]\[\033[0;32m\]\u\[\033[0m\]\[\033[0;36m\]@
 33  黄
 34  蓝
 35  紫红
-36  淡蓝   
+36  淡蓝
 
 
 在这里使用，不需要          \[  \]
@@ -83,9 +83,9 @@ ulimit -Sn unlimited
 // ecl build on debian 9  DEPLOY
 ====================================================================================================
 sudo apt install -y gcc g++ gdb vim cmake unzip tmux
-sudo apt install lua5.3 liblua5.3-dev libmariadb-dev
+sudo apt install libmariadb-dev
 sudo apt install libncurses
-sudo apt install libncurses5-dev  libsqlite3-dev
+sudo apt install libncurses5-dev  libsqlite3-dev   libmariadbclient-dev
 
 
 // SHADOWSOCKS
@@ -176,3 +176,9 @@ SHADOWSOCKS 加速
 wget --no-check-certificate https://raw.githubusercontent.com/wn789/BBR/master/bbr.sh
 chmod +x bbr.sh
 ./bbr.sh
+
+
+
+新安装的软件
+----------------------------------------------------------------------
+git mlocate mariadb mongodb
