--- a/linux.config
+++ b/linux.config
@@ -142,7 +142,8 @@ function git-branch-name {
 
 function git-branch-prompt {
   local branch=`git-branch-name`
-  if [ $branch ]; then printf "[%s]" $branch; fi
+  local id=`id -u`
+  if [ $branch ] && [ ! -z $id ] ; then printf "[%s]" $branch; fi
 }
 
 # export PS1="\[\e[1;33m\]\u@\h:\w\$(git-branch-prompt)$ \[\e[m\]"
