--- a/linux.config
+++ b/linux.config
@@ -75,6 +75,7 @@ vim /etc/security/limits.conf
 vim /etc/profile
 ====================================================================================================
 export PATH=$PATH:/usr/local/go/bin
+ulimit -c  unlimited
 ulimit -Sc unlimited
 ulimit -Sn unlimited
 
