--- a/linux.config
+++ b/linux.config
@@ -184,3 +184,73 @@ chmod +x bbr.sh
 新安装的软件
 ----------------------------------------------------------------------
 git mlocate mariadb mongodb
+
+
+
+
+
+
+
+-------------------------------- 跳板机制作 ---------------------------------------
+龙伟 2018/4/16 18:01:19		新机器的种子
+===============================================================
+alias, vimrc, selinux, limits, sudoers, sshd
+disk-mount,wget,luajit,mongo,nodejs,zeromq
+useradd,sshkey,log_level_info,perf_mon
+
+
+/etc/vimrc
+set expandtab tabstop=4 shiftwidth=4
+filetype indent on
+
+nmap <C-j> <C-e>
+nmap <C-k> <C-y>
+
+highlight DiffAdd    cterm=bold  ctermbg=yellow
+highlight DiffDelete cterm=bold  ctermbg=cyan
+highlight DiffChange cterm=bold  ctermbg=green
+highlight DiffText   cterm=bold  ctermbg=red
+
+
+https://www.vim.org/scripts/download_script.php?src_id=15643
+解压到.vim/indent/*
+mkdir -p .vim/indent/
+cp web-indent/indent/* .vim/indent/
+
+
+alias l='ls -l'
+alias ll='ls -la'
+
+
+selinux	getenforce
+/etc/security/limits.conf
+
+visudo  配置:		% wheel  no passwd
+
+sshd  配置文件权限:	PubkeyAuthentication		打开	YES
+
+disk-mount /root/目录下
+
+yum install wget,curl,luajit,nodejs,zeromq
+
+阿里源：mongo-org  只安装 shell tool
+
+useradd -G wheel game
+
+ssh-keygen: mv id_rsa.pub authorized_keys
+
+.bashrc
+export LOG_LEVEL_INFO=true
+export LOG_LEVEL_DEBUG=true
+
+
+
+做镜像之前，要把私钥去掉，不要分发到其它机器上
+
+-------------------- 制作镜像之后 --------------------
+game用户:
+跳板机设置密码、  方便登录
+switcher设置密码、 客户端要用
+初始化磁盘 init_disk.sh
+
+上传 /data/p3/....脚本
