new file for fy

--- a/linux.config
+++ b/linux.config
@@ -123,6 +123,7 @@ alias gd='git diff'
 alias gs='git status'
 alias gb='git branch -vv'
 alias gl='git log  --graph'
+alias glp='git log -p'
 alias gss='git pull; git status'
 alias gitc='git pull --rebase; git status'
 alias git_ul='git ls-files -v | grep "^[hsmrck] "'
@@ -254,3 +255,20 @@ switcher设置密码、 客户端要用
 初始化磁盘 init_disk.sh
 
 上传 /data/p3/....脚本
+
+
+
+
+-------------------- SSH CONFIG --------------------
+.ssh/config     权限：600
+
+Host 别名
+    Hostname 主机名
+    Port 端口
+    User 用户名
+
+示例：
+Host 6kw
+    User game
+    HostName 123.207.188.22
+    IdentityFile ~/.ssh/id_rsa
