--- a/linux.config
+++ b/linux.config
@@ -272,3 +272,11 @@ Host 6kw
     User game
     HostName 123.207.188.22
     IdentityFile ~/.ssh/id_rsa
+
+
+
+------------------- 登录艺术字 ------------------------------
+网页：http://www.patorjk.com/software/taag/#p=display&f=ANSI%20Shadow&t=U%20.%20C
+    title:[FIGlet and AOL Macro Fonts Supported]
+
+文件：/etc/motd
