parallel in linux shell

--- a/linux.config
+++ b/linux.config
@@ -38,6 +38,10 @@ cp /etc/ssh/sshd_config /etc/ssh/sshd_config.bak
 5.最后输入!wq保存文件并退出
 6.重启systemctl restart sshd
 
+ssh连接数量限制
+    sshd_config  在这个地方有改  
+    #MaxSessions 10
+
 
 时区同步：
 tzselect  交互式选择
