static ip for centos 7

--- a/linux.config
+++ b/linux.config
@@ -284,3 +284,22 @@ Host 6kw
     title:[FIGlet and AOL Macro Fonts Supported]
 
 文件：/etc/motd
+
+
+
+------------------- CentOS 7 下静态IP设置：-------------------
+
+sudo vim  /etc/sysconfig/network-scripts/ifcfg-eno16777736
+
+    改：
+        BOOTPROTO="static"
+        ONBOOT="yes"
+    增：
+        IPADDR=192.168.0.32
+        GATEWAY=192.168.0.1
+        NETMASK=255.255.255.0
+
+cat /etc/resolv.conf 下：
+    nameserver 114.114.114.114
+    nameserver 8.8.8.8
+
