--- a/linux.config
+++ b/linux.config
@@ -153,8 +153,7 @@ function git-branch-prompt {
 }
 
 # export PS1="\[\e[1;33m\]\u@\h:\w\$(git-branch-prompt)$ \[\e[m\]"
-export PS1="\[\e[1;33m\]\u@\h:\w\[\e[m\]\[\e[1;32m\]\$(git-branch-prompt)\[\e[m\]\[\e[1;33m\]$ \[\e[m\]"
-
+export PS1="\[\e[1;35m\]\u@\h:\w\[\e[m\]\[\e[1;32m\]\$(git-branch-prompt)\[\e[m\]\[\e[1;36m\] P.7 \[\e[1;35m\]$\[\e[m\] "
 
 
 .gdbinit
