new branch on commit & ssh login

--- a/linux.config
+++ b/linux.config
@@ -302,3 +302,17 @@ cat /etc/resolv.conf 下：
     nameserver 114.114.114.114
     nameserver 8.8.8.8
 
+
+
+----------------------------------------------------------------
+
+配置为证书登录：
+
+sshd_config
+    
+    PermitRootLogin no          # 禁用root
+    PasswordAuthentication no   # 禁用密码
+
+    ssh-keygen生成对，将id_rsa.pub 拷贝进authorized_keys
+    将id_rsa用puttygen.exe转换并保存新的privateKey,然后使用新的私有key
+    putty.exe -load zh_CN  game@xxxx -i C:\Users\Preboy\fy.ppk
