--- a/linux.config
+++ b/linux.config
@@ -39,7 +39,7 @@ cp /etc/ssh/sshd_config /etc/ssh/sshd_config.bak
 6.重启systemctl restart sshd
 
 ssh连接数量限制
-    sshd_config  在这个地方有改  
+    sshd_config  在这个地方有改
     #MaxSessions 10
 
 
@@ -309,10 +309,19 @@ cat /etc/resolv.conf 下：
 配置为证书登录：
 
 sshd_config
-    
+
     PermitRootLogin no          # 禁用root
     PasswordAuthentication no   # 禁用密码
 
     ssh-keygen生成对，将id_rsa.pub 拷贝进authorized_keys
     将id_rsa用puttygen.exe转换并保存新的privateKey,然后使用新的私有key
     putty.exe -load zh_CN  game@xxxx -i C:\Users\Preboy\fy.ppk
+
+
+
+防止socket listen的端口被占用，一般使用 32768 ~ 60999 之外的端口
+/etc/sysctl.conf    通常情况下不需要改
+    net.ipv4.ip_local_port_range = 32768 ~ 60999
+    sysctl -a 查看全部配置
+    sysctl -p 查看修改配置
+
