--- a/linux.config
+++ b/linux.config
@@ -1,4 +1,7 @@
 
+adduser -G wheel zcg        # 建立用户并加入到组
+usermod -a -G wheel zcg     # 将已有的用户添加进组
+
 其它文件：
 mycat.sh
 echo `ls -d $*` | xargs -n 1 cat -n
