--- a/linux.config
+++ b/linux.config
@@ -328,3 +328,25 @@ sshd_config
     sysctl -a 查看全部配置
     sysctl -p 查看修改配置
 
+
+----------------------------------------------------------------
+替换： /etc/samba/smb.conf
+
+[global]
+#workgroup=WORKGROUP
+#server string=Samba Server %v
+#netbios name=centos
+security=share
+#map to guest=bad user
+#dns proxy=no
+
+
+[public]
+comment = server Directories
+path =/home/zcg/workspace/
+browseable = no
+valid users = %S
+writable = yes
+create mask = 0775
+directory mask = 0775
+valid users = zcg
