--- a/linux.config
+++ b/linux.config
@@ -129,7 +129,7 @@ alias gf='git fetch'
 alias gd='git diff'
 alias gs='git status'
 alias gb='git branch -vv'
-alias gl='git log  --graph'
+alias gl='git log  --graph --all'
 alias glp='git log -p'
 alias gss='git pull; git status'
 alias gitc='git pull --rebase; git status'
