--- a/linux.config
+++ b/linux.config
@@ -103,11 +103,11 @@ sudo pip install shadowsocks
 ss.josn 内容：
 {
     "server":"0.0.0.0",
-    "server_port":58388,
+    "server_port":56329,
     "local_port":1080,
-    "password":"barfoo!",
+    "password":"b&8Xo@}!",
     "timeout":600,
-    "method":"rc4-md5"
+    "method":"chacha20-ietf-poly1305"
 }
 
 
